--- a/style.css
+++ b/style.css
@@ -82,3 +82,12 @@ form button:hover {
 .bad{
   background-color: red;
 }
+
+.overweight{
+  padding: 10px 20px ;
+  background-color: orange;
+
+
+
+}
+
